# terraform-coder-agent

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
conventions/: conventions.md
skills/brownfield-drift-review/: SKILL.md
skills/plan-review-checklist/: SKILL.md
skills/terraform-conventions/: SKILL.md
src/tfagent/: __init__.py  agent.py  commands.py  config.py  flow.py  instructions.py  main.py  observers.py  runner.py
src/tfagent/console/: README.md  __init__.py  agent_runner.py  app.py  app_state.py  formatters.py  harness_console.py  state_driver.py  textual_state_driver.py
src/tfagent/console/commands/: __init__.py  base.py  exit_handler.py  mode_handler.py  session_handler.py  todo_handler.py
src/tfagent/console/components/: __init__.py  agent_status.py  list_selection.py  mode_help.py  prompt_rule.py  scroll_panel.py  text_input.py
src/tfagent/console/observers/: __init__.py  base.py  error_display.py  planning_models.py  planning_output.py  reasoning_display.py  text_output.py  tool_approval.py  tool_call_display.py  usage_display.py  web_search_display.py
src/tfagent/tools/: __init__.py  export.py  hcl_guard.py  plan_summary.py  terraform.py
tests/: test_agent.py  test_config.py  test_console_tool_calls.py  test_export.py  test_flow.py  test_hcl_guard.py  test_plan_summary.py  test_runner.py  test_skills.py  test_terraform_tools.py  test_tfagent_observers.py
workspace/: main.tf  outputs.tf  variables.tf
