[project]
name = "terraform-coder-agent"
version = "0.1.0"
description = "A miniature Claude-Code-style coding agent for Terraform, built on the Microsoft Agent Framework harness."
requires-python = ">=3.11"
dependencies = [
    "agent-framework-core>=1.11.0",
    "agent-framework-openai>=1.10.1",
    "python-dotenv>=1.2.0",
    "rich>=14.0.0",
    "textual>=6.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
]

[project.scripts]
tfagent = "tfagent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tfagent"]
